grails-app/assets/stylesheets/general.scss
@import "variables";

body {
  font-size: $font-size-m;
  color: #444444;
  background-color: white;
  margin: 0;
  padding: 0;
  font-family: Arimo, "Liberation Sans" ,sans-serif;
}

main {
  max-width: $body-width;
  margin: auto;
  padding: 0 $body-lateral-padding;
}

footer {
  margin-top: 30px;
  border-top: 1px solid rgba(0,0,0,0.2);
  padding-top: 10px;
}

h1, h2, h3, h4, h5 {
  margin-top: 0px;
  margin-bottom: 10px;
}

a {
  color: black;
  text-decoration: none;
  &:hover {
    text-decoration: underline;
  }
}

table {
  width: 100%;
  border-collapse: collapse;
  thead {
    //background-color: #e4b9b9;
    td, th {
      text-align: left;
    }
  }

  tbody {

  }

  tr {
    border: 1px solid #ccc;
    border-left: 0;
    border-right: 0;

    td,th {
      padding: 5px;
    }
  }
}

form {
  > div, div.fieldcontain {
    margin-top: 15px;
    margin-bottom: 15px;
  }

  .required-indicator {
    color: #ff5642;
  }

  label {
    display: block;
    margin-bottom: 5px;
  }

  input[type=text],input[type=password],input[type=email] {
    width: 100%;
    background-color: white;
    border-radius: 5px;
    border:1px solid darkgray;
    padding: 10px;
    font-size: 1em;
  }
}

fieldset {
  border: 0;
}

.scaffold-show {
  background-color: white;
  border: 2px solid lightgrey;
  border-radius: 5px;

  h1 {
    background: #f5f5f5;
    border-bottom: 1px solid #ddd;
    border-radius: 3px 3px 0 0;
    margin: 0;
    padding: 10px;
    font-size: $font-size-l;
  }

  .property-list {
    .property-label {
      font-weight: bold;
    }
  }
}

.alert {
  padding: 0 5px;
  &.alert-danger {
    border:1px solid #ff8b8b;
    background-color: #ffb7b9;
  }
}

.btn {
  border-radius: 5px;
  padding: 5px;
  border:1px solid;
  font-size: 1em;
  &.btn-primary {
    background-color: $color-orange;
    color: white;
  }
  &.full-width {
    width: 100%;
  }
}

.width-80p {
  width: 80%;
}

